[package]
name = "ptx-parser"
version = "0.1.0"
edition = "2021"
authors = ["Alex Riasanovsky"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ariasanovsky/ptx-parser"
description = "parser for ptx files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
